changed flow velocity to be weekly